{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 161,
  "lineage": "28325e32-6168-dca0-da94-3918c758aeb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "ProdHub_EgressTGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-2:339712950328:transit-gateway/tgw-091f44ebccff98e8a",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "enable",
            "description": "TGW to connect to Spoke VPC",
            "dns_support": "enable",
            "id": "tgw-091f44ebccff98e8a",
            "multicast_support": "disable",
            "owner_id": "339712950328",
            "propagation_default_route_table_id": "tgw-rtb-0e000d2d5e96e7de1",
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "RT_Egress01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.14.0.0/24",
            "id": "tgw-rtb-05b2dcbc3dbe15a30_10.14.0.0/24",
            "transit_gateway_attachment_id": "tgw-attach-0f7e11404a2a7d128",
            "transit_gateway_route_table_id": "tgw-rtb-05b2dcbc3dbe15a30"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_ec2_transit_gateway_route_table.RT-Egrees",
            "aws_ec2_transit_gateway_vpc_attachment.spoke-01",
            "aws_subnet.spoke-01-private",
            "aws_vpc.spoke-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "RT_Egress02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.15.0.0/24",
            "id": "tgw-rtb-05b2dcbc3dbe15a30_10.15.0.0/24",
            "transit_gateway_attachment_id": "tgw-attach-09f2940c25373ce69",
            "transit_gateway_route_table_id": "tgw-rtb-05b2dcbc3dbe15a30"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_ec2_transit_gateway_route_table.RT-Egrees",
            "aws_ec2_transit_gateway_vpc_attachment.spoke-02",
            "aws_subnet.spoke-02-private",
            "aws_vpc.spoke-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "RT_PrivateSPOKE_blackhole",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": true,
            "destination_cidr_block": "10.14.0.0/24",
            "id": "tgw-rtb-02ca2d179f2fca30b_10.14.0.0/24",
            "transit_gateway_route_table_id": "tgw-rtb-02ca2d179f2fca30b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_ec2_transit_gateway_route_table.RT-Private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "RT_Private_Allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.13.0.0/24",
            "id": "tgw-rtb-02ca2d179f2fca30b_10.13.0.0/24",
            "transit_gateway_attachment_id": "tgw-attach-053ee5ca9f3a842a6",
            "transit_gateway_route_table_id": "tgw-rtb-02ca2d179f2fca30b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_ec2_transit_gateway_route_table.RT-Private",
            "aws_ec2_transit_gateway_vpc_attachment.prod-hub",
            "aws_subnet.prod-hub-private",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "RT_Private_Blackhole",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": true,
            "destination_cidr_block": "10.15.0.0/24",
            "id": "tgw-rtb-02ca2d179f2fca30b_10.15.0.0/24",
            "transit_gateway_route_table_id": "tgw-rtb-02ca2d179f2fca30b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_ec2_transit_gateway_route_table.RT-Private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "RT-Egrees",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:transit-gateway-route-table/tgw-rtb-05b2dcbc3dbe15a30",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-05b2dcbc3dbe15a30",
            "transit_gateway_id": "tgw-091f44ebccff98e8a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "RT-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:transit-gateway-route-table/tgw-rtb-02ca2d179f2fca30b",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-02ca2d179f2fca30b",
            "transit_gateway_id": "tgw-091f44ebccff98e8a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "prod-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-053ee5ca9f3a842a6",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-030556ea166695896"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-091f44ebccff98e8a",
            "vpc_id": "vpc-09526567bb7f0e137",
            "vpc_owner_id": "339712950328"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_subnet.prod-hub-private",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "spoke-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0f7e11404a2a7d128",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-06ca28dbfb0fd695c"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-091f44ebccff98e8a",
            "vpc_id": "vpc-050fbf29367afec82",
            "vpc_owner_id": "339712950328"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_subnet.spoke-01-private",
            "aws_vpc.spoke-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "spoke-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-09f2940c25373ce69",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0577696f83d055d34"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-091f44ebccff98e8a",
            "vpc_id": "vpc-0d5bfb12ffccadfae",
            "vpc_owner_id": "339712950328"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_subnet.spoke-02-private",
            "aws_vpc.spoke-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08124e5e0c0ed76a0",
            "association_id": "eipassoc-056f19e83f8488011",
            "domain": "vpc",
            "id": "eipalloc-08124e5e0c0ed76a0",
            "network_border_group": "us-west-2",
            "network_interface": "eni-05d99a18371a25664",
            "private_dns": "ip-10-13-0-117.us-west-2.compute.internal",
            "private_ip": "10.13.0.117",
            "public_dns": "ec2-44-241-246-111.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.246.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW_ProdHub",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod-t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e914639d0cca79a",
            "arn": "arn:aws:ec2:us-west-2:339712950328:instance/i-012a1f44a0206765d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a1f44a0206765d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0933d8e092a4b445e",
            "private_dns": "ip-10-13-0-75.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.13.0.75",
            "public_dns": "ec2-35-85-47-0.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.47.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-087d5f00ec254700a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030556ea166695896",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a532ba58dc7da2ad"
            ]
          },
          "dependencies": [
            "aws_subnet.prod-hub-private",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spoke-01-t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e914639d0cca79a",
            "arn": "arn:aws:ec2:us-west-2:339712950328:instance/i-066be2fa80d0c006b",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066be2fa80d0c006b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ddab606113e7f32",
            "private_dns": "ip-10-14-0-74.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.14.0.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf2f312e4a24b900",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ca28dbfb0fd695c",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057553adb0cd63582"
            ]
          },
          "dependencies": [
            "aws_subnet.spoke-01-private",
            "aws_vpc.spoke-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spoke-02-t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e914639d0cca79a",
            "arn": "arn:aws:ec2:us-west-2:339712950328:instance/i-0396dab19f7140c44",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0396dab19f7140c44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb9eb66fc4852461",
            "private_dns": "ip-10-15-0-74.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.15.0.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d36405608ce12a1c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577696f83d055d34",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba5c8ef20c1af8bd"
            ]
          },
          "dependencies": [
            "aws_subnet.spoke-02-private",
            "aws_vpc.spoke-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_ProdHub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:internet-gateway/igw-0ed5ef64fdbd9104d",
            "id": "igw-0ed5ef64fdbd9104d",
            "owner_id": "339712950328",
            "tags": {
              "Environment": "prod-hub",
              "Name": "$var.prod_environment-igw"
            },
            "tags_all": {
              "Environment": "prod-hub",
              "Name": "$var.prod_environment-igw"
            },
            "vpc_id": "vpc-09526567bb7f0e137"
          },
          "dependencies": [
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Prod_HubNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08124e5e0c0ed76a0",
            "association_id": "eipassoc-056f19e83f8488011",
            "connectivity_type": "public",
            "id": "nat-047a06839dfe02734",
            "network_interface_id": "eni-05d99a18371a25664",
            "private_ip": "10.13.0.117",
            "public_ip": "44.241.246.111",
            "subnet_id": "subnet-03ae2a213b0b931f3",
            "tags": {
              "Environment": "prod-hub",
              "Name": "nat-gateway-prod-hub"
            },
            "tags_all": {
              "Environment": "prod-hub",
              "Name": "nat-gateway-prod-hub"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW_ProdHub",
            "aws_subnet.prod-hub-pub",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_prod_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2831919b16b45e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-047a06839dfe02734",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2831919b16b45e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.IGW_ProdHub",
            "aws_nat_gateway.Prod_HubNAT",
            "aws_route_table.prod-hub-private",
            "aws_subnet.prod-hub-pub",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_prod_spoke01_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.14.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2831919b16b45e21604174044",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2831919b16b45e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-091f44ebccff98e8a",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_route_table.prod-hub-private",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_prod_spoke02_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.15.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d2831919b16b45e22469904450",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2831919b16b45e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-091f44ebccff98e8a",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_route_table.prod-hub-private",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_spoke01_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ba9060e37e0c56961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba9060e37e0c5696",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-091f44ebccff98e8a",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_route_table.spoke-01-private",
            "aws_vpc.spoke-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_spoke02_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-098ace850c520e3721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098ace850c520e372",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-091f44ebccff98e8a",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.ProdHub_EgressTGW",
            "aws_route_table.spoke-02-private",
            "aws_vpc.spoke-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ed5ef64fdbd9104d",
            "id": "r-rtb-091ad9e3661734e761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091ad9e3661734e76",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_ProdHub",
            "aws_route_table.prod-hub-public",
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-hub-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:route-table/rtb-0d2831919b16b45e2",
            "id": "rtb-0d2831919b16b45e2",
            "owner_id": "339712950328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047a06839dfe02734",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.14.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-091f44ebccff98e8a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.15.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-091f44ebccff98e8a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod-hub",
              "Name": "prod-hub-private-route-table"
            },
            "tags_all": {
              "Environment": "prod-hub",
              "Name": "prod-hub-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09526567bb7f0e137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-hub-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:route-table/rtb-091ad9e3661734e76",
            "id": "rtb-091ad9e3661734e76",
            "owner_id": "339712950328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed5ef64fdbd9104d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod-hub",
              "Name": "prod-hub-public-route-table"
            },
            "tags_all": {
              "Environment": "prod-hub",
              "Name": "prod-hub-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09526567bb7f0e137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke-01-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:route-table/rtb-0ba9060e37e0c5696",
            "id": "rtb-0ba9060e37e0c5696",
            "owner_id": "339712950328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-091f44ebccff98e8a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "spoke-01",
              "Name": "spoke-01-private-route-table"
            },
            "tags_all": {
              "Environment": "spoke-01",
              "Name": "spoke-01-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-050fbf29367afec82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.spoke-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke-02-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:route-table/rtb-098ace850c520e372",
            "id": "rtb-098ace850c520e372",
            "owner_id": "339712950328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-091f44ebccff98e8a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "spoke-02",
              "Name": "spoke-02-private-route-table"
            },
            "tags_all": {
              "Environment": "spoke-02",
              "Name": "spoke-02-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5bfb12ffccadfae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.spoke-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-hub-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:subnet/subnet-030556ea166695896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.13.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030556ea166695896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712950328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09526567bb7f0e137"
          },
          "dependencies": [
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-hub-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:subnet/subnet-03ae2a213b0b931f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.13.0.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ae2a213b0b931f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712950328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09526567bb7f0e137"
          },
          "dependencies": [
            "aws_vpc.prod_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke-01-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:subnet/subnet-06ca28dbfb0fd695c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.14.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ca28dbfb0fd695c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712950328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-050fbf29367afec82"
          },
          "dependencies": [
            "aws_vpc.spoke-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke-02-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:subnet/subnet-0577696f83d055d34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.15.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0577696f83d055d34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712950328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d5bfb12ffccadfae"
          },
          "dependencies": [
            "aws_vpc.spoke-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:vpc/vpc-09526567bb7f0e137",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.13.0.0/24",
            "default_network_acl_id": "acl-07e0e594c0d64b974",
            "default_route_table_id": "rtb-01919c00b776bfb77",
            "default_security_group_id": "sg-0a532ba58dc7da2ad",
            "dhcp_options_id": "dopt-0a4bf7e07c436351d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09526567bb7f0e137",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01919c00b776bfb77",
            "owner_id": "339712950328",
            "tags": {
              "Environment": "prod-hub",
              "Name": "prod-hub-vpc"
            },
            "tags_all": {
              "Environment": "prod-hub",
              "Name": "prod-hub-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:vpc/vpc-050fbf29367afec82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.14.0.0/24",
            "default_network_acl_id": "acl-04d9ed762b5eda9a6",
            "default_route_table_id": "rtb-0c03483da62a9fd53",
            "default_security_group_id": "sg-057553adb0cd63582",
            "dhcp_options_id": "dopt-0a4bf7e07c436351d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050fbf29367afec82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c03483da62a9fd53",
            "owner_id": "339712950328",
            "tags": {
              "Environment": "spoke-01",
              "Name": "spoke-01-vpc"
            },
            "tags_all": {
              "Environment": "spoke-01",
              "Name": "spoke-01-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:339712950328:vpc/vpc-0d5bfb12ffccadfae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/24",
            "default_network_acl_id": "acl-0ec7f3e673a3144c7",
            "default_route_table_id": "rtb-0aaf49be448a879fd",
            "default_security_group_id": "sg-0ba5c8ef20c1af8bd",
            "dhcp_options_id": "dopt-0a4bf7e07c436351d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5bfb12ffccadfae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aaf49be448a879fd",
            "owner_id": "339712950328",
            "tags": {
              "Environment": "spoke-02",
              "Name": "spoke-02-vpc"
            },
            "tags_all": {
              "Environment": "spoke-02",
              "Name": "spoke-02-vpc"
            }
          }
        }
      ]
    }
  ]
}